components/Loader/Loader.css
.loader {
    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
  
    height: 100%;
    width: 100%;
  
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #F6F6F6;
    overflow: hidden;
    z-index: 2;
  }

.loader-wrapper{
  position: relative;
  height: 90%;
  width: 100%;
  position: fixed;
  inset: 0;
  overflow: hidden;
}

.loader-words{
  position: relative;
  overflow: hidden;
  height: 43rem;
}

.loader-overlay{
  position: absolute;
  inset: 0;
  height: 100%;
  z-index: 2;
  background: linear-gradient(
    to bottom,
    rgba(246, 246, 246, 0.9),
    rgba(246, 246, 246, 0.9) 47%,
    transparent,
    transparent 47%,
    transparent,
    transparent 55%,
    rgba(246, 246, 246, 0.9) 50%,
    rgba(246, 246, 246, 0.9)
  );
}

.loader-word{
  display: block;
  font-size: 3rem;
}

.loader-progressWrapper{
  position: absolute;
  bottom: 0;
  left: 0;
  height: 5vh;
  width: 100%;
  z-index: 3;
}

.loader-progress{
  height: 100%;
  width: 100%;
  background-color: black;
  transform: scaleX(0);
  transform-origin: left center;
}

.loader-progressNumber{
  position: absolute;
  left: -5vw;
  top: 50%;
  transform: translateY(-50%);
  z-index: 4;
  white-space: nowrap;
  color: white;
  font-size: 3.2rem;
}

